# kfs

./: .gitignore  Cargo.toml  Makefile  a.out  boot.s  build-script.rs  build.rs  grub.cfg  i386-unknown-none.json  linker.ld  multiboot_header.s
.cargo/: config.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/workflows/: add-issue-to-project.yml  cargo-test.yml  clippy.yml  rustfmt.yml
archived/: build-script.rs
assets/: boot.s  grub.cfg  i386-unknown-none.json  linker.ld
docs/: boot.md  i386.md
iso/boot/grub/: grub.cfg
src/: gdt.rs  idt.rs  lib.rs  main.rs  panic.rs  print.rs  ps2.rs  terminal.rs  vga.rs
src/gdt/: access.rs  entry.rs  flag.rs  init.rs  mod.rs
src/terminal/: cursor.rs  entry.rs  mod.rs  ps2.rs  screen.rs  terminal.rs  vga.rs
src/vga/: buffer.rs  color.rs  cursor.rs  mod.rs
targets/: i386-target.json
