[package]
name = "kfs"
version = "0.1.0"
edition = "2021"

[build]
target = "targets/i386-target.json"

[target.'cfg(target_arch = "x86")']
rustflags = ["-Zbuild-std=core,alloc", "--target", "targets/i386-target.json"]
linker = "rust-lld"

[profile.dev]
panic = "abort"
test = false

[profile.release]
panic = "abort"
test = false
