[package]
name = "kfs"
version = "0.1.0"
edition = "2021"

[build]
target = "i386-unknown-none.json"

[target.'cfg(target_arch = "x86")']
rustflags = ["-Zbuild-std=core,alloc", "--target", "targets/i386-target.json"]
linker = "rust-lld"

[profile.dev]
panic = "abort"
test = false

[profile.release]
panic = "abort"
test = false
